--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>2.0.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.6</version>
+        </dependency>
+
 
     </dependencies>
 
